minor.create_csv

--- a/createBCRV.ipynb
+++ b/createBCRV.ipynb
@@ -11,12 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(25):\n",
-    "    df=CURVE.random_bcrv_csv(400,4,path='io/0_Curves/')\n"
+    "#dislocation = tan(5)\n",
+    "dislocation = 0.08748866352592401\n",
+    "for i in range(50):\n",
+    "    df=CURVE.random_bcrv_csv(400,4,path='io/0_Curves/',dislocation=dislocation,filename='d8bcrv001.csv')\n"
    ]
   },
   {
